--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
     "gulp-gh-pages": "^0.5.2",
     "gulp-sass": "^2.0.4",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "backbone": "^1.2.3",
+    "jquery": "^2.1.4",
+    "normalize.css": "^3.0.3",
+    "underscore": "^1.8.3"
   }
 }
