--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp": "^3.9.0",
     "gulp-gh-pages": "^0.5.2",
     "gulp-sass": "^2.0.4",
+    "moment": "^2.10.6",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
